--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ table tr td:not(:first-child) { border-left:1px dotted #A0A0A0; }
 
 table tr td div.entry span { -webkit-border-radius:999px; -moz-border-radius:999px; border-radius:999px; width:8px; height:8px;
 	display:inline-block; }
+table tr td div.entry span.size-2 { width:12px; height:12px; }
+table tr td div.entry span.size-3 { width:16px; height:16px; }
 table tr td div.entry.red { color:#F04C23; }
 table tr td div.entry.red span { background:#F04C23; }
 table tr td div.entry.green { color:#00B254; }
