--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@ body { font-family:Arial, Helvetica, sans-serif; background:url('../img/bg.jpg')
 table tr:not(:first-child) { border-top:1px dotted #A0A0A0; }
 table tr th { font-size:16px; color:#6B6B6B; font-weight:normal; }
 table tr th.week { padding:10px; text-align:center; }
-table tr th.label { -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); height:100px; font-size:14px; }
+table tr th.label { -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); height:52px; font-size:14px;
+	padding:10px 0; }
 table tr td { padding:5px; font-size:12px; font-weight:bold; }
 table tr td:not(:first-child) { border-left:1px dotted #A0A0A0; }
 
 table tr td div.entry span { -webkit-border-radius:999px; -moz-border-radius:999px; border-radius:999px; width:8px; height:8px;
-	display:inline-block; }
+	display:inline-block; cursor:pointer; }
 table tr td div.entry span.size-2 { width:12px; height:12px; }
 table tr td div.entry span.size-3 { width:16px; height:16px; }
 table tr td div.entry.red { color:#F04C23; }
