--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 body { font-family:Arial, Helvetica, sans-serif; background:url('../img/bg.jpg') fixed; }
 
+table { margin:10px; }
+
 table tr:not(:first-child) { border-top:1px dotted #A0A0A0; }
-table tr th { font-size:14px; color:#6B6B6B; font-weight:normal; -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); }
-table tr th.week { height:88px; }
-table tr th.label { height:52px; padding:10px 0; }
-table tr td { padding:5px; font-size:12px; font-weight:bold; }
+table tr th { font-size:14px; color:#6B6B6B; font-weight:normal; }
+table tr th.week { font-size:9px; }
+table tr th.label { padding:30px 0; -webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); }
+table tr td { padding:5px; font-size:12px; font-weight:bold; width:14px; }
 table tr td:not(:first-child) { border-left:1px dotted #A0A0A0; }
 
+table tr td div.entry { text-align:center; }
 table tr td div.entry span { -webkit-border-radius:999px; -moz-border-radius:999px; border-radius:999px; width:8px; height:8px;
 	display:inline-block; cursor:pointer; }
 table tr td div.entry span.size-2 { width:12px; height:12px; }
